# concept-to-code-skill

./: .gitignore  LICENSE  PLAN.md  README.md  SKILL.md  emit_stubs.py  spec_workspace.py
docs/: spec-first-workflow.md
prompts/: step-a-coanalysis.md  step-b-skeleton.md
schemas/: spec.schema.json
tests/: emit_stubs_test.py  gate_selftest_creusot.py  gate_selftest_kani.py  gate_selftest_kani_f64.py  gate_selftest_verus.py  test_emit_stubs.py  test_spec_workspace.py
tests/fixtures/: broken_creusot.rs  broken_kani.rs  broken_verus.rs  empty_commands_view_node.json  example_concept.json  kani_f64_demo.json  valid_creusot.rs  valid_kani.rs  valid_verus.rs
tests/fixtures/contracts-crate/: Cargo.toml
tests/fixtures/contracts-crate/src/: lib.rs
tests/fixtures/trait_enum_demo/democrate/specs/: any_toggle.json  fast_toggle.json  slow_toggle.json  toggle.json
verifiers/creusot/: contracts.md  step-c-verify.md
verifiers/kani/: contracts.md  step-c-verify.md
verifiers/verus/: contracts.md  step-c-verify.md
