[package]
name = "contracts"
version = "0.0.0"
edition = "2021"
publish = false
description = "Minimal verifier-contracts facade fixture for the gate self-tests. Exposes contracts::creusot::* and contracts::verus::prelude::*."

[features]
default = []
kani = ["dep:kani"]
creusot = ["dep:creusot-contracts", "dep:creusot-std"]
verus = ["dep:vstd"]

[dependencies]
kani = { version = "0.0.1", optional = true }
creusot-std = { git = "https://github.com/creusot-rs/creusot", rev = "9cf662ce6dfe16810b871dbde4c72a3f37567ae0", package = "creusot-std", optional = true }
vstd = { version = "0.0.0-2026-05-24-0157", optional = true }

[target.'cfg(not(creusot))'.dependencies]
creusot-contracts = { version = "0.8.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(creusot)"] }
